<resources>
    <string name="app_name">Weather Studio</string>
    <string name="ask_add_country">Добавьте город:</string>
    <string name="country">Одесса</string>
    <string name="sunset">Закат: </string>
    <string name="sunrise">Восход: </string>
    <string name="feels_like">Чувствуется как: </string>
    <string name="temp">Температура: </string>
    <string name="humidity">Влажность: </string>
    <string name="speed">Скорость ветра: </string>
    <string name="pressure">Давление: </string>
</resources>